All tests passing now